// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalHeader unit tests Does not render a close button 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-bottom-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
}

.emotion-1 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 100;
  --tw-text-opacity: 1;
  color: rgba(39, 39, 42, var(--tw-text-opacity));
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    class="emotion-0"
  >
    <h5
      class="emotion-1"
    >
      This is my title
    </h5>
  </div>
</DocumentFragment>
`;

exports[`ModalHeader unit tests Renders a close button that reacts on click 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-bottom-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
}

.emotion-1 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 100;
  --tw-text-opacity: 1;
  color: rgba(39, 39, 42, var(--tw-text-opacity));
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
  position: relative;
  top: 0.375rem;
}

.emotion-3 {
  width: 1rem;
  height: 1rem;
}

<div
    class="emotion-0"
  >
    <h5
      class="emotion-1"
    >
      This is my title
    </h5>
    <div
      class="emotion-2"
      data-testid="modal-close-button"
    >
      <svg
        class="emotion-3"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 18L18 6M6 6l12 12"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
